# TokamakNeutronSource.jl

./: .JuliaFormatter.toml  .gitignore  CITATION.bib  LICENSE  Manifest.toml  Project.toml  README.md  build.jl
.github/workflows/: CI.yml  Documentation.yml
dev/: index.html  search_index.js
dev/search/: index.html
docs/: Manifest.toml  Project.toml  make.jl
docs/src/: index.md
notebooks/: create-sdef.ipynb  example-with-aux-source.ipynb  pyproject.toml  template.ipynb
pluto/: demo-excel-interpolation.jl  demo-neutron-source.jl  verify-sdef-ptrac.jl
src/: TokamakNeutronSource.jl  reaction-rates.jl
test/: reaction-rates.jl  runtests.jl
test/data/: TRT_215_8T_NBI.xlsx  beforeTQ.eqdsk
