[tool.poetry]
name = "tokamak-ns"
version = "0.1.0"
description = "Apply mckit to compute source"
authors = ["dvp2015"]
license = "MIT"
readme = "README.md"
packages = [{include = "tokamak_ns", from="src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
mckit = "^0.6.22"
jupyterlab = "^3.5.3"
matplotlib = "^3.6.3"
tqdm = "^4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
